--- a/package.json
+++ b/package.json
@@ -9,8 +9,9 @@
     "formsy-semantic-ui-react": "^2.1.3",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "4.0.3",
     "recharts": "^2.1.9",
+    "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^2.1.2",
     "web-vitals": "^2.1.4"
   },
