--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "formsy-semantic-ui-react": "^2.1.3",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "recharts": "^2.1.9",
     "semantic-ui-react": "^2.1.2",
