--- a/package.json
+++ b/package.json
@@ -9,8 +9,11 @@
     "formsy-semantic-ui-react": "^2.1.3",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "react-plotly.js": "^2.5.1",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "react-simple-maps": "^2.3.0",
+    "react-tooltip": "^4.2.21",
     "recharts": "^2.1.9",
     "semantic-ui-react": "^2.1.2",
     "web-vitals": "^2.1.4"
