--- a/package.json
+++ b/package.json
@@ -1,43 +1,19 @@
 {
-  "name": "newrepo",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "@testing-library/jest-dom": "^5.16.4",
-    "@testing-library/react": "^13.0.1",
-    "@testing-library/user-event": "^13.5.0",
-    "formsy-semantic-ui-react": "^2.1.3",
-    "react": "^18.0.0",
-    "react-dom": "^18.0.0",
-    "react-scripts": "4.0.3",
-    "semantic-ui-css": "^2.4.1",
-    "react-router-dom": "^6.3.0",
-    "recharts": "^2.1.9",
-    "semantic-ui-react": "^2.1.2",
-    "web-vitals": "^2.1.4"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
+    "name": "gnpcase",
+    "version": "1.0.0",
+    "description": "back-end for the front-end to be used as an example for how to deploy a fullstack app using Heroku.",
+    "main": "app.js",
+    "scripts": {
+      "test": "echo \"Error: no test specified\" && exit 1",
+      "build:ui": "rm -rf build && cd ./client && npm run build --prod && cp -r build ../"
+    },
+    "author": "",
+    "license": "ISC",
+    "dependencies": {
+      "cors": "^2.8.5",
+      "express": "^4.17.1",
+      "node-fetch": "^2.6.1",
+      "pg": "^8.5.1"
+    }
   }
-}
+  
