--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "newrepo",
-  "engines":{
+  "engines": {
     "node": "16.11.x"
   },
   "version": "0.1.0",
@@ -9,21 +9,24 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.0.1",
     "@testing-library/user-event": "^13.5.0",
+    "cors": "^2.8.5",
     "formsy-semantic-ui-react": "^2.1.3",
+    "node-fetch": "^3.2.4",
+    "pg": "^8.7.3",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-plotly.js": "^2.5.1",
     "react-router-dom": "^6.3.0",
+    "react-scripts": "4.0.3",
     "react-simple-maps": "^2.3.0",
     "react-tooltip": "^4.2.21",
-    "react-scripts": "4.0.3",
-    "semantic-ui-css": "^2.4.1",
     "recharts": "^2.1.9",
+    "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^2.1.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "server":"node --max-old-space-size={8192} gnp_server/requests.js"
+    "server": "node --max-old-space-size={8192} gnp_server/requests.js"
   },
   "eslintConfig": {
     "extends": [
